--- a/src/index.css
+++ b/src/index.css
@@ -235,5 +235,24 @@ justify-content: space-between;
    
 }
 
+/* Slider */
+
+.slide-container .carousel{
+  text-align:center;
+  position: relative;
+  top: 100px;
+  left: 70px;
+  /* height: 418px; */
+  width: 1351px
+  }
+  
+  .carousel .thumb {
+    display: none !important;
+  }
+  
+  .carousel .control-dots .dot.selected{
+    background-color: #227840;
+  }
+
 
  
